Fix box row content overflow

--- a/components/Box/LabeledBoxRow/styles.module.scss
+++ b/components/Box/LabeledBoxRow/styles.module.scss
@@ -8,5 +8,6 @@
 	&-content {
 		display: flex;
 		align-items: center;
+		overflow: hidden;
 	}
 }
